# godtradingbot

./: .env.example  README.md  api.md  pytest.ini  requirements.txt
docs/api/: trading_api.md
src/backend/: Dockerfile  config.py  database.py  fly.toml  init_db.py  main.py  pyproject.toml  requirements.txt  schemas.py  websocket.py
src/backend/api/routers/: dex.py  meme.py
src/backend/monitoring/: __init__.py  alerts.py  audit_log.py  dashboard.py
src/backend/services/dex/: aggregator.py  jupiter.py  orca.py  raydium.py
src/backend/shared/: __init__.py
src/backend/shared/models/: ollama.py
src/backend/trading/: meme_manager.py  solana_dex_manager.py  strategy_switcher.py
src/backend/trading_agent/agents/: risk_manager_agent.py
src/shared/ai_analyzer/: ai_analyzer.py  trade_analyzer.py
src/shared/models/: adaptive_thresholds.py  meme_trading.py  model_registry.py  ollama.py  prompt_templates.py  trading.py
src/trading/internal/risk/: manager.go
src/trading/internal/types/: trading.go
tests/integration/: test_monitoring.py  test_risk_analysis.py
tests/unit/ai/: test_ai_analyzer.py  test_model_integration.py  test_ollama_model.py  test_risk_manager.py  test_trade_analyzer.py
tests/unit/models/: test_adaptive_thresholds.py  test_model_registry.py  test_prompt_templates.py
tests/unit/monitoring/: test_alerts.py  test_audit_log.py  test_dashboard.py
tests/unit/services/dex/: test_aggregator.py  test_jupiter.py  test_orca.py  test_raydium.py
tests/unit/trading/: test_solana_dex_manager.py  test_strategy_switcher.py
