[tool.poetry]
name = "tradingbot-backend"
version = "0.1.0"
description = "Trading Bot Backend System"
authors = ["Devin <devin@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.5.3"
sqlalchemy = "^2.0.25"
websockets = "^12.0"
python-dotenv = "^1.0.0"
pymongo = "^4.6.1"
oauth2 = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "main:app"
